# MultiCamSelfCal

./: README.md  README.rst  pyproject.toml  requirements.txt  sprintf_winsafe.m
.github/workflows/: test.yml
BlueCFindingPoints/: findpointsBlueC  im2pointsLocally.m  localconfig.m
CalTechCal/: README.txt  analyse_error.m  apply_distortion.m  begin-attempt-initialize-rad.patch  check_active_images.m  comp_error_calib.m  comp_ext_calib.m  compute_extrinsic_init.m  compute_extrinsic_refine.m  export_calib_data.m  extract_parameters.m  ginput3.m  go_calib_optim_iter.m  gorad.m  goradf.m  normalize.m  preparedata.m  project_points2.m  quiver.m  rigid_motion.m  rodrigues.m  visualize_distortions.m
CommonCfgAndIO/: ConvertOldConfigToNew.m  configdata.m  expname.m  loaddata.m  oldexperiments.m  read_configuration.m  read_generic_configuration.m
MultiCamSelfCal/: README.txt  changes.txt  gocal.m  showpoints.m
MultiCamSelfCal/BlueCLocal/: align_existing_camera_centers.m  bluechoengg.m  bluecrz.m  flydra.m  humdra.m  mamarama.m  strawlab_test.m
MultiCamSelfCal/CoreFunctions/: align3d.m  estimateLambda.m  estimatePX.m  estsimt.m  euclidize.m  findinl.m  findoutl.m  reprerror.m  selfcalib.m
MultiCamSelfCal/FindingPoints/: atlanticall.pm  getpoint.m  im2imstat.m  im2pmultiproc.pl  im2points.m  mycorr2.m  virooms.pm
MultiCamSelfCal/LocalAlignments/: erlangen.m  g9.m  joinoscars.m  nfi2r.m  planarcams.m  planarmove.m  planefit.m
MultiCamSelfCal/MartinecPajdla/: setpaths.m  startup.m  test_.m
MultiCamSelfCal/OutputFunctions/: dispcamstats.m  drawcloud.m  drawobject.m  drawscene.m  evalreprerror.m  savecalpar.m
MultiCamSelfCal/Ransac/: fFDs.c  fFDs.cc  fFDs.mexglx  fslcm.c  fslcm.cc  fslcm.mexglx  fu2F7.m  lin_fm.cc  lin_fm.mexglx  mfFDs.m  normu.m  nsamples.m  p2e.m  rEG.m  rroots.c  rroots.cc  rroots.mexglx  run_mkoct.sh  seig.m  u2F.m
MultiCamValidation/: gorec.m
MultiCamValidation/CoreFunctions/: P2KRtC.m  estimateX.m  findinl.m  isptnorm.m  rq.m  uP2X.m  workvolume.m
MultiCamValidation/FindingPoints/: atlantic.pm  getpoint.m  im2imstat.m  im2pmultiproc.pl  im2points.m  (+2 more)
RadialDistortions/: comp_distortion_oulu.m  isptnorm.m  readradfile.m  readradfile_mb.m  undoheikk.m  undoradial.m
RansacM/: Fsampson.m  nsamples.m  pointnormiso.m  rEG.m  u2Fdlt.m
configurations/: strawlab_test
pymulticamselfcal/: align.py  formats.py
python/: pyproject.toml  setup.py
python/multicamselfcal/: align.py  execute.py  formats.py  visualization.py
python/test/: test_align.py  test_mcsc.py
(+57 files in other folders)
